styles.css
/* ... */
@media (max-width: 420px) {
  footer {
    width: 100%;
    max-width: 420px;
    padding-left: 0;
  }

  h1 {
    font-size: 28px;
    text-align: center;
  }

  .container {
    width: 100%;
    max-width: 420px;
    margin: 0 auto;
    padding: 64px 0;
  }

  #landing .container {
    padding-top: 32px;
  }

  #pricing .container {
    width: 100%;
    max-width: 384px;
  }

  #steps .container {
    padding-top: 0;
  }

  .nav__row {
    max-width: 420px;
    padding: 0 16px;
  }

  #landing h1,
  #quality .section__title,
  #testimonials .section__title {
    font-size: 30px;
  }

  #features .section__title,
  #pricing .section__title,
  .plan__price {
    font-size: 36px;
  }

  .quality__description,
  .quality__img--wrapper,
  .steps__description,
  .steps__img--wrapper,
  .values__description,
  .testimonials__description,
  .testimonials__img,
  .value {
    max-width: 420px;
  }

  .header__description {
    display: flex;
    flex-direction: column;
    width: 100%;
    max-width: 328px;
    margin: 0px auto;
    display: flex;
    justify-items: center;
    align-items: center;
  }

  .header__description--para {
    margin: 24px 0;
  }

  .header__email {
    margin-top: 64px;
  }

  .header__email--input {
    position: static;
    line-height: 1.5;
    padding: 16px 0px;
    width: 100%;
    display: flex;
    justify-items: center;
    align-items: center;
  }

  .header__email--btn {
    width: 100%;
    line-height: 1.5;
    padding: 16px 0px;
    margin: 16px 0px 0px;
  }

  .header__customers--title {
    margin-top: 20px;
  }

  .header__img--wrapper {
    width: 100%;
    margin-top: 20px;
  }

  #quality .container,
  .service__description,
  .service__para,
  .steps__img,
  #testimonials .container {
    width: 100%;
    max-width: 400px;
    text-align: center;
  }

  .service__description {
    padding: 24px 16px;
  }

  .service__row {
    flex-direction: column;
    align-items: center;
    text-align: center;
    padding-bottom: 0;
    margin: 0 24px;
  }

  .quality__grid {
    width: 64px;
    height: 64px;
  }

  #quality .section__para {
    text-align: left;
  }

  .steps__img--wrapper {
    overflow: visible;
    margin-bottom: 32px;
  }

  .steps__description {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .steps__grid {
    bottom: -50px;
    left: 50%;
    transform: translateX(-50%);
    height: 5rem;
    width: 5rem;
  }

  #steps .section__tag {
    margin-top: 32px;
  }

  #steps .section__title {
    margin-bottom: 24px;
  }

  .values__description,
  .values__list,
  .testimonials__img--wrapper,
  .start__button:nth-child(1) {
    margin-right: 0px;
  }

  .step__description {
    margin-left: 0;
  }

  .step__title,
  #pricing .container {
    margin-top: 8px;
  }

  .value__para {
    width: 100%;
    text-wrap: pretty;
  }

  .value__title {
    flex: space-between;
  }

  .values__img--wrapper {
    overflow: visible;
  }

  .values__img {
    max-width: 320px;
  }

  .plan {
    width: 100%;
    max-width: 368px;
  }

  .step,
  .values__list,
  .value,
  .start_buttons {
    justify-content: center;
    align-items: center;
  }

  .testimonial__footer,
  .testimonial__profile,
  .start__buttons {
    flex-direction: column;
    align-items: center;
  }

  .testimonial__img {
    height: 64px;
    width: 64px;
  }

  .start__title {
    font-size: 24px;
    margin-bottom: 16px;
  }

  .start__buttons {
    width: auto;
    margin-top: 24px;
  }

  .start__button {
    height: auto;
    padding: 16px 24px;
    font-size: 14px;
  }

  .start__button:nth-child(2) {
    margin-top: 16px;
  }

  .footer__columns {
    width: 100%;
    max-width: 320px;
    justify-content: center;
    flex-wrap: wrap;
    padding-left: 0;
  }

  .footer__column {
    width: auto;
    padding: 0 16px;
    text-align: center;
    align-items: center;
  }

  .footer__column:nth-child(-n + 3) {
    margin-top: 0;
  }

  .footer__copyright {
    margin: 24px 0;
  }

  .footer__columns,
  .footer__socials {
    margin: 0;
  }

  #quality .section__para,
  #values .section__para,
  #testimonials .section__para {
    text-align: center;
  }
}

